--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         <p id="textFive"; onmouseover="setTextColor(textFive)"><em>Andrew Pfalz</em></p>    <br>
         <p id="textSix"; onmouseover="setTextColor(textSix)"><em>Andrew Pfalz</em></p>    <br>
     
+        <p><a href="home.html">Enter</a></p>
+    
     <div id="one"; onmouseover="newColorOne(one); newPositionOne(one)"; onmouseover="hoverColorOne(one)"; onload= "newColorOne(one); newPositionOne(one)"> </div>
     <div id="two"; onmouseover = "newColorOne(two); newPositionOne(two)"; onmouseover="hoverColorOne(two)"></div>
     <div id="three"; onmouseover = "newColorOne(three); newPositionOne(three)"; onmouseover="hoverColorOne(three)"></div>
