--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <head>
         <title>Homepage</title>
-        <link rel="stylesheet" href="stylesheetasdf.css" type="text/css" />
+        <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
         <script type="text/javascript"> 
             
             function setTextColor(whichP) {
