a lot of things

--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
-<html>
-   
+<html>   
 <head>
+<title>Andrew Pfalz</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
      <script type="text/javascript">
         
