--- a/theForestForTheTrees.html
+++ b/theForestForTheTrees.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>The forest for the trees</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
         <script type="text/javascript">
         
