--- a/weAreRestlessThings.html
+++ b/weAreRestlessThings.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>We are restless things</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
         <script type="text/javascript">
         
