--- a/followNoPath.html
+++ b/followNoPath.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Follow no path</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
         <script type="text/javascript">
         
