--- a/theTruthAboutLimits.html
+++ b/theTruthAboutLimits.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>The truth about limits</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
         <script type="text/javascript">
         
