--- a/vane.html
+++ b/vane.html
@@ -1,5 +1,6 @@
-<html>
+<html>    
 <head>
+<title>Vane</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
         <script type="text/javascript">
         
