--- a/itCanBeHard.html
+++ b/itCanBeHard.html
@@ -84,7 +84,7 @@
     
 <div id="hardParagraphDiv"><p class="worksParagraph">Second performance by Laura Pillman at University of North Texas Electric LaTex Festival November 2014</p><br></div>
 
-<iframe style="margin-left:11em; z-index:3" width="560" height="315" src="//www.youtube.com/embed/LN7-2GppeZk" frameborder="no" allowfullscreen></iframe>
+    <iframe style="margin-left:11em; z-index:3" width="560" height="315" src="https://www.youtube.com/embed/LN7-2GppeZk" frameborder="0"></iframe>
     
 </body>
 </html>
