--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="homeDiv" id="nine" onmouseover="shiftPositionLeft(nine); lightenColor(nine)"></div>
     <div class="homeDiv" id="ten" onmouseover="shiftPositionRight(ten); lightenColor(ten)"></div>
     <div class="homeDiv" id="eleven" onmouseover="shiftPositionUp(eleven); lightenColor(eleven)"></div>
-    <a href src="home.html">enter</a>
+    <a href="home.html">enter</a>
 
     
        <script type="text/javascript"> 
