fixed vane summary

--- a/vane.html
+++ b/vane.html
@@ -43,18 +43,9 @@
         <p class="worksParagraph"><b>Vane</b><br>installation<br>2014</p>
      
         
-        <p class="worksParagraph">For some, it is not uncommon to only experience the outdoors is in brief moments walking from a
-car to a door. Vane allows a user to experience, in a way, the conditions outside while still inside.
-To experience Vane one need only stand in front of it. When Vane wakes up, it will display the
-current conditions and make sounds until the spectator leaves that change with the weather.
-<p class="worksParagraph">Rather than allowing to the spectator to experience only brief glimpses of nature, Vane invites the
-viewer to ponder longer spans of time. By comparing the current conditions with climate data from
-the past hundred years Vane gives an idea of how unseasonable the current weather is.
-<p class="worksParagraph">Vane is also affected by the time of day and date. So Vane will sound completely different on an
-April morning, a sunset in July, or a midnight in January. The various aspects of weather data are
-mapped musically to various musical parameters such as harmonic vocabulary, register, timbre,
-rhythm and envelope. The visual display is created by choosing colors from a live weather camera.
-As the color of the sky changes outside, so too do the colors of Vane&#39;s display.</p></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p class="worksParagraph">Vane is an installation that generates sounds and images that change depending on the current weather conditions. It uses the date, time, humidity, wind speed to generate its content. It compares all of the current data with recent conditions as well as the last 100 years of climate data. It then adjusts its output to reflect how unseasonable the current weather is. 
+<p class="worksParagraph">The visual display is created by choosing colors from a live weather camera. As the color of the sky changes outside, so too do the colors of Vane&#39;s display. The various aspects of weather data are mapped musically to various musical parameters such as harmonic vocabulary, register, timbre, rhythm and envelope. So Vane will sound completely different on an April morning, a sunset in July, or a midnight in January. For more information go to apfalz.github.io/vane
+</p></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <img src="vanePic.png" style="margin-left:8em; position:relative; display:block"><br><br>
     <iframe class="youtubeLink"; width="560" height="315" src="//www.youtube.com/embed/NuFBF9dQl60" frameborder="0" allowfullscreen></iframe>
 
