--- a/theForestForTheTrees.html
+++ b/theForestForTheTrees.html
@@ -67,7 +67,7 @@
 
 <p class="worksParagraph">This technique is not entirely new, but does represent a shifting of emphasis away from interlaced melodies like those found in Renaissance consort music towards the individual parts functioning collectively as a single entity. This piece explores these ideas by taking the same recognizable motive (a long note followed by a short note) and overlapping instances of it to create a dense texture. 
 
-<p class="worksParagraph">This piece uses another idea drawn from consort music. In renaissance pieces that feature imitation, the parts often enter one at a time. It is possible to trick the listener into thinking there are more instruments playing than there really are by having one part drop out after the others have already begun only to come back in, pretending to be a new instrument. </p><br><br>
+    <p class="worksParagraph">This piece uses another idea drawn from consort music. In renaissance pieces that feature imitation, the parts often enter one at a time. It is possible to trick the listener into thinking there are more instruments playing than there really are by having one part drop out after the others have already begun only to come back in, pretending to be a new instrument. </p><br><br></div>
 
         
         
