--- a/vane.html
+++ b/vane.html
@@ -45,7 +45,7 @@
         
         <p class="worksParagraph">Vane is an installation that generates sounds and images that change depending on the current weather conditions. It uses the date, time, humidity, wind speed to generate its content. It compares all of the current data with recent conditions as well as the last 100 years of climate data. It then adjusts its output to reflect how unseasonable the current weather is. 
 <p class="worksParagraph">The visual display is created by choosing colors from a live weather camera. As the color of the sky changes outside, so too do the colors of Vane&#39;s display. The various aspects of weather data are mapped musically to various musical parameters such as harmonic vocabulary, register, timbre, rhythm and envelope. So Vane will sound completely different on an April morning, a sunset in July, or a midnight in January. For more information go to apfalz.github.io/vane
-</p></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</p></div><br><br><br><br>
     <img src="vanePic.png" style="margin-left:8em; position:relative; display:block"><br><br>
     <iframe class="youtubeLink"; width="560" height="315" src="//www.youtube.com/embed/NuFBF9dQl60" frameborder="0" allowfullscreen></iframe>
 
