--- a/noManIsAnIsland.html
+++ b/noManIsAnIsland.html
@@ -41,7 +41,7 @@
 <div class="menuDiv" syle="width:100em"; id="homeDiv"; onmouseover="newMenuColor(homeDiv)"; onclick="newMenu(homeDiv)"><a class="menuLink"; href="home.html">home</a></div><br><br><br><br>
 
 <div class="worksParagraphDiv">
-<p class="worksParagraph"><b>No man is an island</b><br>for midi keyboard with live electronics<br>2013</p>
+    <p class="worksParagraph"><b>No man is an island</b><br>for midi keyboard with live electronics<br>2013</p></div>
     <br>
 <iframe class="soundCloud" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/122624217&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
