--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
                  
                 var body = document.getElementsByTagName("body")[0];
                 body.appendChild(vertDiv);
-                 
+                console.log("this worked");
          }  
          }
      //------------------------------------------------------------------------------------------
