trying to update index

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 var num = Number(whichDiv.style.marginLeft.replace(/px/, ""));
                 num += 10;
                 whichDiv.style.marginLeft = num + "px";
+                console.log("this worked");
             }
             
             function shiftPositionRight(whichDiv) {
