--- a/works.html
+++ b/works.html
@@ -145,10 +145,10 @@
 <body onload="makeGrowingDivs()">
 
     <!-- menu divs -->
-<div class="menuDiv"  id="worksDiv"; onmouseover="newMenuColor(worksDiv)"; onclick="newMenu(worksDiv)"><a class="menuLink"; href="works.html">works</a></div><br>
-<div class="menuDiv" id="contactDiv"; onmouseover="newMenu(contactDiv); newMenuColor(contactDiv)"; onclick="newMenu(contactDiv)"><a class="menuLink";  href="contact.html">contact</a></div><br>
-<div class="menuDiv" id="bioDiv"; onmouseover="newMenu(bioDiv); newMenuColor(bioDiv)"; onclick="newMenu(bioDiv)"><a class="menuLink"; href="bio.html">bio</a></div><br>
-<div class="menuDiv" id="homeDiv"; onmouseover="newMenuColor(homeDiv); newMenu(homeDiv)"; onclick="newMenu(homeDiv)"><a class="menuLink"; href="home.html">home</a></div><br> 
+<div class="menuDiv"  id="worksDiv"; ><a class="menuLink"; href="works.html">works</a></div><br>
+<div class="menuDiv" id="contactDiv";><a class="menuLink";  href="contact.html">contact</a></div><br>
+<div class="menuDiv" id="bioDiv"; ><a class="menuLink"; href="bio.html">bio</a></div><br>
+<div class="menuDiv" id="homeDiv";><a class="menuLink"; href="home.html">home</a></div><br> 
     
 <!-- var linkNames = ["onTheRedactionOfSounds.html", "vane.html", "followNoPath.html", "itCanBeHard.html", "atDuskASign.html", "noManIsAnIsland.html",                               "theFeelingOfChokingOnAir.html", "theForestForTheTrees.html", "theTruthAboutLimits.html", "onGentleIndifference.html", "youMightBegForReliefAndNotGetAny.html",                "weAreRestlessThings.html", "soliloquy.html", "buoyanciesAndDensities.html"]; -->
     <a href="onTheRedactionOfSounds.html" class="workPageLink">On the redaction of sounds</a><br>
