--- a/gibber.html
+++ b/gibber.html
@@ -26,13 +26,13 @@ b.octave = -1;<br>
 
 a.chord.seq([[0,2,4], [4,6,8], [5,7,9], [2,4,6], [3,5,7], [0,2,4], [3,5,7], [4,6,8,10]], 1/2);<br>
 
-b.play(bassLine, 0.5);<br>
+b.note.seq(bassLine, 0.5);<br>
 
-c.play(melodyOne, 0.5);<br>
+c.note.seq(melodyOne, 0.5);<br>
 
-d.play(melodyTwo, 0.5);<br>
+d.note.seq(melodyTwo, 0.5);<br>
 
-a.play(melodyThree, 0.25);<br>
+a.note.seq(melodyThree, 0.25);<br>
     </p>
 </body>
 </html>
