--- a/contact.html
+++ b/contact.html
@@ -2,37 +2,20 @@
 <head>
 <title>contact info</title>
 <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
-        <script type="text/javascript">
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69191717-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
         
-        function newMenu(whichWorksDiv) {      
-            var newDivWidth = Math.floor((Math.random() * 5) + 7) + "em";       
-            whichWorksDiv.style.width = newDivWidth;
-            var newLeftMarg = Math.floor((Math.random() * 25) + 7);   
-            whichWorksDiv.style.marginLeft = newLeftMarg;
-        }
-        
-        function newMenuColor(whichWorksDiv) {
-            var firstDigit = Math.floor(Math.random() * 10).toString();
-            var secondDigit = Math.floor(Math.random() * 10).toString();
-            var thirdDigit = Math.floor(Math.random() * 10).toString();
-            var fourthDigit = Math.floor(Math.random() * 10).toString();
-            var fifthDigit = Math.floor(Math.random() * 10).toString();
-            var sixthDigit = Math.floor(Math.random() * 10).toString();
-            var divColor = "#" + thirdDigit + fourthDigit + firstDigit + secondDigit + sixthDigit + fifthDigit;
-            whichWorksDiv.style.backgroundColor = divColor;
-        }
-        </script>
+
 </head>
-<body onload="newMenu(worksDiv);
-              newMenu(contactDiv);
-              newMenu(bioDiv);
-              newMenu(homeDiv);
-              newMenuColor(worksDiv);
-              newMenuColor(contactDiv);
-              newMenuColor(bioDiv);
-              newMenuColor(homeDiv)"
-      onmousemove=" countToEight();
-                    addDiv(event);">
+<body>
      <!-- menu divs -->
 <div class="menuDiv" id="worksDiv"; onmouseover="newMenuColor(worksDiv); newMenu(worksDiv)"; onclick="newMenu(worksDiv)"><a class="menuLink"; href="works.html">works</a></div><br><br>
 <div class="menuDiv" id="contactDiv"; onmouseover="newMenu(contactDiv); newMenuColor(contactDiv)"; onclick="newMenu(contactDiv)"><a class="menuLink";  href="contact.html">contact</a></div><br><br>
