--- a/impermanence.html
+++ b/impermanence.html
@@ -21,7 +21,8 @@
 <a class="menuLink"; href="home.html">home</a><br>
 
 <div class="worksParagraphDiv">
-<p class="worksParagraph"><b>Impermanence</b><br>four FireFaders<br>2015</p></div>
+<p class="worksParagraph"><b>Impermanence</b><br>for four virtual harps<br>2015</p>
+<p class="worksParagraph">Score can be downloaded <a href=Andrew_Pfalz_Of_grating_impermanence.pdf>here.</a></p></div>
 
    <br>
     <br>
@@ -29,7 +30,7 @@
     <br>
 
 <iframe class="soundCloud" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/237269128&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-  
+
 
 <script>
 
