added link on works page and fixed url

--- a/vacant_interstices.html
+++ b/vacant_interstices.html
@@ -22,7 +22,7 @@
 
 <div class="worksParagraphDiv">
 <p class="worksParagraph"><b>Vacant Interstices </b><br>game<br>2016</p>
-<p class="worksParagraph">Click <a href="vacant_interstices_web_player.html">here</a> to play in FireFox</p></div>
+<p class="worksParagraph">Click <a href="game6.html">here</a> to play in FireFox</p></div>
 
    <br>
     <br>
