--- a/works.html
+++ b/works.html
@@ -155,6 +155,7 @@
 <div class="menuDiv" id="homeDiv";><a class="menuLink"; href="home.html">home</a></div><br>
 
 <!-- var linkNames = ["onTheRedactionOfSounds.html", "vane.html", "followNoPath.html", "itCanBeHard.html", "atDuskASign.html", "noManIsAnIsland.html",                               "theFeelingOfChokingOnAir.html", "theForestForTheTrees.html", "theTruthAboutLimits.html", "onGentleIndifference.html", "youMightBegForReliefAndNotGetAny.html",                "weAreRestlessThings.html", "soliloquy.html", "buoyanciesAndDensities.html"]; -->
+    <a href="vacant_interstices.html" class="workPageLink">Vacant Interstices</a><br>
     <a href="furrowsAndFolds.html" class="workPageLink">Furrows and folds</a><br>
     <a href="impermanence.html" class="workPageLink">Impermanence</a><br>
     <a href="insouciance.html" class="workPageLink">Insouciance</a><br>
