--- a/rnn_demo.html
+++ b/rnn_demo.html
@@ -3,6 +3,14 @@
 <title>Generating Audio Using RNNS</title>
 
 <link rel="stylesheet" type="text/css" href="rnn_demo.css">
+<style>
+
+      @keyframes fade{
+          from {background : red;}
+          to   {background : white;}
+      }
+
+</style>
 
 
 </head>
@@ -15,13 +23,23 @@
     <h2 class="centered_text">a PhD Dissertation by Andrew Pfalz</h2>
     <p>This page is a brief overview of my dissertation work. I will explain:</p>
     <ul>
-        <li>how to train recurrent neural networks to predict audio</li>
+        <li>how to <span id='train_word'>train</span> recurrent neural networks to predict audio</li>
         <li>how these models can be sampled from to create new sequences of audio</li>
         <li>four concrete approaches to sampling from an LSTM with audio examples</li>
     </ul>
 </div>
 
 
+<script>
+
+var train_word = document.getElementById('train_word');
+    console.log(train_word);
+    train_word.addEventListener("animationend", function(){train_word.style['animation'] = ''; train_word.style['fill-opacity'] = 0;});
+    train_word.onmouseout      = function(){train_word.style['animation'] = 'fade 3s'};
+    train_word.onmouseover     = function(){train_word.style['fill-opacity'] = '0.75'};
+
+
+</script>
 <!--=========================Audio files and picture=========================-->
 <div class="containing_div">
     <div class="highest_level" align="center">
@@ -55,7 +73,7 @@
     <div class="half_size left_floating_div" id="lstm_image_div">
         <!-- <svg id="svg" shape-rendering="geometricPrecision">
         </svg> -->
-        <object id="lstm_drawing" data="lstm_drawing.svg" type="image/svg+xml"></object>
+        <object id="lstm_drawing" width='100%' data="lstm_drawing.svg" type="image/svg+xml"></object>
         <!-- <img id="lstm_image" src=lstm.png> -->
     </div>
     <div class="half_size right_floating_div" id="overview_text_div">
@@ -84,14 +102,18 @@ for each time step:
 
     </pre>
     </div>
-    <div class="right_floating_div half_size" id="training_image_div"><br><img  src="training_futura.png"></div>
+    <div class="right_floating_div half_size" id="training_image_div"><br>
+      <!-- <img  src="training_futura.png"></div> -->
+      <object id="training" width="100%" data="training.svg" type="image/svg+xml"></object>
+    </div>
 </div>
 
 <!--=========================Sampling =========================-->
 <hr>
 <div class="containing_div" id="sampling_div">
     <div class="half_size left_floating_div" id="sampling_image_div">
-        <img id="sampling_image" src="generation_futura.png">
+        <!-- <img id="sampling_image" src="generation_futura.png"> -->
+        <object id="sampling" width="100%" data="generation.svg" type="image/svg+xml"></object>
     </div>
 
     <div class="half_size right_floating_div" id="sampling_text_div"><br>
@@ -188,7 +210,10 @@ for each epoch:
        The predicted vectors can sometimes have discontinuities at their extremities which are problematic.
     </div>
     <div class="half_size right_floating_div" id="vector_image_div">
-        <img src="vector_image.png" width="80%" id="vector_image">
+        <!-- <img src="vector_image.png" width="80%" id="vector_image"> -->
+        <object id="vector_data" width="100%" data="vector_data.svg" type="image/svg+xml"></object>
+
+
     </div>
 </div>
 
@@ -251,7 +276,9 @@ for each epoch:
 
     <div class="half_size right_floating_div" id="magnitude_spectrum_image_div">
         <br><br>
-        <img src="vector_image.png" id="magnitude_spectrum_image">
+        <!-- <img src="vector_image.png" id="magnitude_spectrum_image"> -->
+        <object id="magnitude_data" width="100%" data="vector_data.svg" type="image/svg+xml"></object>
+
     </div>
 </div>
 <hr>
@@ -325,7 +352,9 @@ for each epoch:
         </p>
     </div>
     <div class="half_size right_floating_div">
-        <img src="transpose.png" id="transpose_image">
+        <!-- <img src="transpose.png" id="transpose_image"> -->
+        <object id="transpose_data" width="100%" data="transpose_data.svg" type="image/svg+xml"></object>
+
     </div>
 </div>
 
@@ -366,7 +395,9 @@ for each epoch:
         </p>
     </div>
         <div class="half_size right_floating_div">
-            <img src="column_vector.png" id="column_vector_image">
+            <!-- <img src="column_vector.png" id="column_vector_image"> -->
+            <object id="column_data" width="100%" data="column_data.svg" type="image/svg+xml"></object>
+
         </div>
 </div>
 
@@ -392,22 +423,6 @@ for each epoch:
 </div>
 
 
-<script>
-    var drawing     = document.getElementById("lstm_drawing");
-    // console.log(drawing);
-    // var load_func   = function(){
-    //     var svg_doc = drawing.contentDocument;
-    //     console.log("loaded svg");
-    // }
-    // drawing.addEventListener("load", function(){
-    //     var svg_doc = drawing.contentDocument;
-    //     console.log("loaded svg");
-    // }, false);
-    var svg_doc = drawing.contentDocument;
-    var forget_gate = svg_doc.getElementById("forget_gate");
-    console.log(forget_gate);
-    forget_gate.onmouseover = function(){forget_gate.setAttribute("style", "fill-opacity:0.25")};
 
-</script>
 </body>
 </html>
