--- a/rnn_demo.html
+++ b/rnn_demo.html
@@ -30,16 +30,7 @@
 </div>
 
 
-<script>
 
-var train_word = document.getElementById('train_word');
-    console.log(train_word);
-    train_word.addEventListener("animationend", function(){train_word.style['animation'] = ''; train_word.style['fill-opacity'] = 0;});
-    train_word.onmouseout      = function(){train_word.style['animation'] = 'fade 3s'};
-    train_word.onmouseover     = function(){train_word.style['fill-opacity'] = '0.75'};
-
-
-</script>
 <!--=========================Audio files and picture=========================-->
 <div class="containing_div">
     <div class="highest_level" align="center">
@@ -73,7 +64,7 @@ var train_word = document.getElementById('train_word');
     <div class="half_size left_floating_div" id="lstm_image_div">
         <!-- <svg id="svg" shape-rendering="geometricPrecision">
         </svg> -->
-        <object id="lstm_drawing" width='100%' data="lstm_drawing.svg" type="image/svg+xml"></object>
+        <object id="lstm_drawing" width='100%' data="lstm_drawing.svg" type="image/svg+xml" onload="add_animations()"></object>
         <!-- <img id="lstm_image" src=lstm.png> -->
     </div>
     <div class="half_size right_floating_div" id="overview_text_div">
@@ -421,8 +412,44 @@ for each epoch:
            This is in stark contrast to the other methods that produce outputs where sometimes the data is only barely discernible.
     </div>
 </div>
+<script>
+function add_animations(){
+    var drawing        = document.getElementById('lstm_drawing');
+    var content        = drawing.contentDocument;
+
+    var forget_gate    = content.getElementById("forget_gate");
+    var input_gate     = content.getElementById("input_gate");
+    var update_gate    = content.getElementById("update_gate");
+    var output_gate    = content.getElementById("output_gate");
+    var forget_sigmoid = content.getElementById("forget_sigmoid");
+    var input_sigmoid  = content.getElementById("input_sigmoid");
+    var input_tanh     = content.getElementById("input_tanh");
+    var input_mult     = content.getElementById("input_mult");
+    var update_mult    = content.getElementById("update_mult");
+    var update_add     = content.getElementById("update_add");
+    var output_sigmoid = content.getElementById("output_sigmoid");
+    var output_tanh    = content.getElementById("output_tanh");
+    var output_mult    = content.getElementById("output_mult");
 
 
 
+
+    var opass = '0.75';
+
+    var items   = [forget_gate, input_gate , update_gate, output_gate,forget_sigmoid, input_sigmoid, input_tanh, input_mult, update_mult, update_add, output_sigmoid, output_tanh, output_mult];
+
+
+
+    for (var i=0; i < items.length; i++){
+        let item = items[i];
+
+        item.addEventListener("animationend", function(){item.style.animation = ''; item.style['fill-opacity'] = 0;});
+        item.onmouseout      = function(){item.style.animation    = 'fade 3s'; console.log('onmouseout')};
+        item.onmouseover     = function(){item.style['fill-opacity'] = opass};
+    }
+}
+
+
+</script>
 </body>
 </html>
